Add daily quote functionality. Add favicons. Add loading spinner. Clean up code. Update CSS.

--- a/authors.html
+++ b/authors.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TPO CaC</title>
+    <title>Authors</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="32x32 16x16">
+    <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="android-chrome-512x512.png" sizes="512x512">
+    <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="180x180">
 </head>
 
 <body>
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a href="quoteoftheday.html">Quote of the day</a></li>
-        <li><a class="active " href="authors.html">Authors</a></li>
+        <li><a class="active" href="authors.html">Authors</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="authors-title">
@@ -34,6 +38,6 @@
         <button id="next-btn" class="pagination-btn">Next</button>
     </div>
 </body>
-<script src="script3.js" async defer></script>
+<script src="js/script3.js" async defer></script>
 
 </html>
