Add Contact page with form integration using FormSpree. Tweak CSS. Clean up code.

--- a/authors.html
+++ b/authors.html
@@ -19,13 +19,16 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="quoteoftheday.html">Quote of the day</a></li>
         <li><a class="active" href="authors.html">Authors</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
-    <div class="authors-title">
-        <h1>Authors</h1>
-    </div>
-    <div class="authors-subtitle">
-        <h3>Here's a list of all the authors that have at least one quote included in our website, along with a short biography. Feel free to check them out!</h3>
+    <div class="title-container">
+        <div class="title">
+            <h1>Authors</h1>
+        </div>
+        <div class="subtitle">
+            <h3>Here's a list of all the authors that have at least one quote included in our website, along with a
+                short biography. Feel free to check them out!</h3>
+        </div>
     </div>
     <div class="list-container">
         <ul id="author-list"></ul>
