--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="quoteoftheday.html">Quote of the day</a></li>
         <li><a href="authors.html">Authors</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
     <div class="title-container">
         <div class="title">
@@ -27,8 +27,7 @@
         </div>
         <div class="subtitle">
             <h3>Welcome to Random Quote Generator! The place you can come to make yourself seem smarter. To get a new
-                random
-                quote, just click on "Get new quote!".</h3>
+                random quote, just click on "Get new quote!"</h3>
         </div>
     </div>
     <div class="container">
