--- a/quoteoftheday.html
+++ b/quoteoftheday.html
@@ -19,10 +19,15 @@
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="quoteoftheday.html">Quote of the day</a></li>
         <li><a href="authors.html">Authors</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
-    <div class="dailyQuote-title">
-        <h1>Quote of the day</h1>
+    <div class="title-container">
+        <div class="title">
+            <h1>Quote of the day</h1>
+        </div>
+        <div class="subtitle">
+            <h3>This is your quote for today! Check back tomorrow for a new daily quote.</h3>
+        </div>
     </div>
     <div class="container">
         <div class="lds-ring">
