Add Twitter sharing functionality for random quote. Add Twitter meta tags.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Random Quote Generator</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@wasivis">
+    <meta name="twitter:title" content="Random Quote Generator">
+    <meta name="twitter:description" content="Generate hundreds of influential quotes with just a click!">
+    <meta name="twitter:image" content="android-chrome-192x192.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="favicon.png" sizes="32x32 16x16">
     <link rel="icon" type="image/png" href="android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" type="image/png" href="android-chrome-512x512.png" sizes="512x512">
     <link rel="apple-touch-icon" type="image/png" href="apple-touch-icon.png" sizes="180x180">
+    <script src="https://kit.fontawesome.com/77133b1b16.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -46,6 +51,27 @@
         </div>
     </div>
     <button class="quote-btn">Get new quote!</button>
+    <div class="social-media-sharing">
+        <p>Share this quote!</p>
+        <div class="social-media-icons">
+            <i class="fa-brands fa-twitter" id="twitter-share"></i>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=wasivis.github.io/randomquotegenerator/"
+                target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.linkedin.com/shareArticle?url=wasivis.github.io/randomquotegenerator/&title=TITLE_GOES_HERE&summary=SUMMARY_GOES_HERE"
+                target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/share/url?url=wasivis.github.io/randomquotegenerator/" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.reddit.com/submit?url=wasivis.github.io/randomquotegenerator/&title=TITLE_GOES_HERE"
+                target="_blank">
+                <i class="fa-brands fa-reddit"></i>
+            </a>
+        </div>
+    </div>
 </body>
 <script src="js/script.js" async defer></script>
 
