Rewrite author page to fetch all data at once and display it as needed instead of fetching data 20 authors at a time. Add comments and clean up code.

--- a/authors.html
+++ b/authors.html
@@ -30,6 +30,11 @@
                 short biography. Feel free to check them out!</h3>
         </div>
     </div>
+    <div class="search-container">
+        <label for="search-input">Search Author:</label>
+        <input type="text" id="search-input">
+        <button id="search-button">Search</button>
+      </div>
     <div class="list-container">
         <ul id="author-list"></ul>
     </div>
