--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,8 @@
             <h1>Contact</h1>
         </div>
         <div class="subtitle">
-            <h3>If you have any suggestions on how to make our site better, or if there's a quote you'd like to see in
-                the
-                future, please send us a message!</h3>
+            <h3>If you have any suggestions on how to make our site better, or if there's a quote you'd like to see here
+                in the future, please send us a message!</h3>
         </div>
     </div>
     <form class="form-container" action="https://formspree.io/f/myyaovlb" method="POST">
