Add CSS for media breakpoints. Clean up JS, HTML and CSS.

--- a/authors.html
+++ b/authors.html
@@ -34,12 +34,7 @@
         <input type="text" id="search-input" placeholder="Search authors...">
         <button id="search-button">Search</button>
     </div>
-    <div class="lds-ring">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <div class="loader"></div>
     <div class="list-container">
         <p id="authors-error-message"></p>
         <ul id="author-list"></ul>
