--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="lds-ring">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <div class="loader"></div>
         <div class="content">
             <div class="image-container"><img src="" class="author-image" id="author-image" /></div>
             <div class="quote-container">
@@ -52,7 +47,7 @@
     </div>
     <button class="quote-btn">Get new quote!</button>
     <div class="twitter-sharing">
-            <i class="fa-brands fa-twitter" id="twitter-btn"></i>
+        <i class="fa-brands fa-twitter" id="twitter-btn"></i>
         <p>Share this quote on twitter!</p>
     </div>
 </body>
