--- a/quoteoftheday.html
+++ b/quoteoftheday.html
@@ -35,12 +35,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="lds-ring">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+        <div class="loader"></div>
         <div class="content">
             <div class="image-container"><img src="" class="author-image" id="daily-author-image" /></div>
             <div class="quote-container">
@@ -51,8 +46,8 @@
     </div>
     <div class="twitter-sharing">
         <i class="fa-brands fa-twitter" id="twitter-btn"></i>
-    <p>Share this quote on twitter!</p>
-</div>
+        <p>Share this quote on twitter!</p>
+    </div>
 </body>
 <script src="js/script2.js" async defer></script>
 
